[package]
name = "next_episode"
version = "0.3.0"
authors = ["Athiwat Chunlakhan"]
description = "Find the next possible episode"
repository = "https://github.com/athiwatc/next_episode"
homepage = "https://github.com/athiwatc/next_episode"
license = "Apache-2.0"
description = """
A library for finding the next possible episode.
"""
readme = "README.md"
exclude = [".vscode"]



[dependencies]
lazy_static = "1.0.1"
regex = "1.0.0"
itertools = "0.7.8"

[dev-dependencies]
criterion = "0.2"
 
[[bench]]
name = "my_benchmark"
harness = false